@@ -1,7 +1,6 @@
 package com.harcyah.kata.codingbat.functional2;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Two2 {
 
@@ -9,7 +8,7 @@ public class Two2 {
         return nums.stream()
             .map(x -> x * 2)
             .filter(x -> x % 10 != 2)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
